# Harkirat155_Professor

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  README.md  action.yml  professor.yaml  pyproject.toml
.github/workflows/: ci.yml  professor-review.yml
config/: professor.example.yaml
docs/: ARCHITECTURE.md  QUICKSTART.md
examples/: benchmark_corpus_50.json  benchmark_sample.json  curation_updates_sample.json  review_pr.py
src/professor/: __init__.py  config.py  logging.py  reviewer.py
src/professor/analyzers/: __init__.py  complexity_analyzer.py  language_tool_analyzers.py  llm_analyzer.py  ruff_analyzer.py  security_analyzer.py
src/professor/benchmark/: __init__.py  harness.py
src/professor/cli/: __init__.py  main.py
src/professor/core/: __init__.py  analyzer.py  language_router.py  models.py
src/professor/github_app/: __init__.py  server.py
src/professor/llm/: __init__.py  anthropic_client.py  base.py  openai_client.py
src/professor/scm/: __init__.py  github.py
tests/unit/: test_analyzer.py  test_benchmark_harness.py  test_complexity_analyzer.py  test_github_app_server.py  test_language_analyzers.py  test_language_router.py  test_models.py  test_security_analyzer.py  test_verdict_policy.py
